Added user APIS

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,11 @@ server.port=5050
 #server.ssl.keyStoreType=PKCS12
 #server.ssl.keyAlias= tomcat
 jwt.secret=urlshortener
+logging.level.org.springframework.boot.autoconfigure.security=INFO
+org.springframework.boot.autoconfigure.security =INFO
+spring.security.user.name=user
+spring.security.user.password=pwd
+
+
+
 
