Added URL logic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,7 @@
-
-spring.datasource.url=jdbc:postgresql:\
-  //urlshortener.ckple2tovcf3.us-west-2.rds.amazonaws.com:5432\
-  /urlshortener
-spring.datasource.username=postgres
-spring.datasource.password=admin123
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:postgresql://localhost:5432/urlshortener
+spring.datasource.username=pdabre12
+spring.datasource.password=admin
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
@@ -18,6 +15,10 @@ logging.level.org.springframework.boot.autoconfigure.security=INFO
 org.springframework.boot.autoconfigure.security =INFO
 spring.security.user.name=user
 spring.security.user.password=pwd
+spring.jackson.serialization.write-dates-as-timestamps=false
+spring.jackson.date-format=yyyy-MM-dd
+
+
 
 
 
