Added URL logic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,7 @@ spring.security.user.name=user
 spring.security.user.password=pwd
 spring.jackson.serialization.write-dates-as-timestamps=false
 spring.jackson.date-format=yyyy-MM-dd
+spring.main.allow-circular-references=true
 
 
 
