--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:17
 VOLUME /tmp
-COPY  target/Url-Shortener-0.0.1-SNAPSHOT.jar backend.jar
+COPY  backend/target/Url-Shortener-0.0.1-SNAPSHOT.jar backend.jar
 ENTRYPOINT ["java","-jar","/backend.jar"]
