--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 backend/HELP.md
 target/
 !backend/.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+# !**/src/main/**/target/
+# !**/src/test/**/target/
 
 ### STS ###
 .apt_generated
