--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,8 @@ services:
     image: 'postgres:13.1-alpine'
     container_name: db
     environment:
-      - POSTGRES_USER=admin
-      - POSTGRES_PASSWORD=pdabre12
+      - POSTGRES_USER=pdabre12
+      - POSTGRES_PASSWORD=admin
     ports:
       - "5432:5432"
    
