--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - db
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/urlshortener
-      - SPRING_DATASOURCE_USERNAME=pdabre12
+      - SPRING_DATASOURCE_USERNAME=urlshortener
       - SPRING_DATASOURCE_PASSWORD=admin
       - SPRING_JPA_HIBERNATE_DDL_AUTO=update
     ports:
@@ -25,9 +25,8 @@ services:
     image: 'postgres:13.1-alpine'
     container_name: db
     environment:
-      - POSTGRES_USER=pdabre12
+      - POSTGRES_USER:urlshortener
       - POSTGRES_PASSWORD=admin
-      - POSTGRES_DB=urlshortener
     ports:
       - "5432:5432"
    
