--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,5 @@
 FROM openjdk:17
 VOLUME /tmp
-COPY  target/Url-Shortener-0.0.1-SNAPSHOT.jar backend.jar
-ENTRYPOINT ["java","-jar","/backend.jar"]
+CMD [ "./mvnw clean package" ]
+COPY  target/Url-Shortener-0.0.1-SNAPSHOT.jar server.jar
+ENTRYPOINT ["java","-jar","/server.jar"]
