Fixed docker compose issues

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:17
 VOLUME /tmp
 CMD [ "./mvnw clean package" ]
-COPY  target/Url-Shortener-0.0.1-SNAPSHOT.jar server.jar
+COPY  jar/Url-Shortener-0.0.1-SNAPSHOT.jar server.jar
 ENTRYPOINT ["java","-jar","/server.jar"]
