--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -97,6 +97,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+        			<outputDirectory>jar</outputDirectory>
+      			</configuration>
 			</plugin>
 		</plugins>
 	</build>
