--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,8 @@ services:
       - POSTGRES_PASSWORD=admin
     ports:
       - "5432:5432"
+    volumes:
+      - ~/pgdata:/var/lib/postgresql/data
    
 
 
