Fixed url issues

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,1 @@
-REACT_APP_SERVER=http://ec2-18-236-157-38.us-west-2.compute.amazonaws.com:8080/
+REACT_APP_SERVER=http://ec2-18-236-157-38.us-west-2.compute.amazonaws.com:8080
