--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -98,7 +98,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-        			<outputDirectory>jar</outputDirectory>
+        			<outputDirectory>jar/</outputDirectory>
       			</configuration>
 			</plugin>
 		</plugins>
